feat: add Makefile + add interfaces
